samples/_failures_safe/1760887853_742904_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_653fd5aa.c: In function ‘main’:
./samples/SAFE/__tmp_653fd5aa.c:152:5: error: expected declaration or statement at end of input
  152 |     sort_word_counts(word_counts, unique_count);
      |     ^~~~~~~~~~~~~~~~
